# Qt-

./: 高级语言程序报告.docx
fly_bird/: CMakeLists.txt  fly_bird.cpp  fly_bird.h  fly_bird.ui  image.qrc  img.qrc  main.cpp
fly_bird/ai_matrix/: output.txt
